--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:text="로그 찍어보는 버튼" />
 
     <Button
+        android:id="@+id/logBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그 찍기" />
