입력한 문구를 받아서 반영하는 예제 화면만

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,30 @@
         android:layout_height="wrap_content"
         android:text="문구 변경하기" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="버튼 누르면, 입력한 내용으로 문구 변경하기"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="입력한대로 변경될 텍스트뷰"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_marginTop="5dp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="여기에 입력한대로 반영됩니다"
+        android:singleLine="true"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="입력 문구 반영하기" />
+
+
 </LinearLayout>
